Implement Facade layer